<resources>
    <string name="app_name">TrackTag</string>
    <string name="search">Поиск</string>
    <string name="home">Главная</string>
    <string name="map">Карта</string>
    <string name="options">Опции</string>
    <string name="photo">Фото</string>
    <string name="like">Лайк</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="guest">Гость</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="login_and_registration">Вход и регистрация</string>
    <string name="register">Регистрация</string>
    <string name="login">Войти</string>
    <string name="pull_down_to_return">Потяни вниз, чтобы вернуться</string>
    <string name="empty_fields">Заполнены не все поля!</string>
    <string name="password_too_short">Пароль должен содержать хотя бы 3 символа!</string>
    <string name="username_too_short">Имя пользователя должно содержать хотя бы 3 символа!</string>
    <string name="user_exists">Пользователь с таким именем уже существует!</string>
    <string name="unknown_error">Произошла неизвестная ошибка!</string>
    <string name="login_user_not_verified">Пользователь не подтверждён!</string>
    <string name="login_bad_credentials">Неправильные имя пользователя или пароль!</string>
    <string name="greetings">С возвращением, %1$s!</string>
    <string name="greetings_new">Добро пожаловать!</string>
    <string name="not_logged_in_yet">Вы ещё не вошли в систему</string>
    <string name="logout">Выйти</string>
    <string name="filters">Фильтры</string>
    <string name="sort_by">Сортировать..</string>
    <string name="tags">Теги</string>
    <string name="clear">Очистить</string>
    <string name="cancel">Отмена</string>
    <string name="apply">Применить</string>
    <string name="filter_by">Фильтровать..</string>
    <string name="are_you_sure_logout">Вы точно хотите выйти?</string>
    <string name="all_data_will_be_deleted">Все ваши данные будут удалены!</string>
    <string name="stay">Остаться!</string>
    <string name="by_author">По автору</string>
    <string name="by_description">По описанию</string>
    <string name="new_first">Сначала новые</string>
    <string name="old_first">Сначала старые</string>
    <string name="alphabet_authors">А-Я по авторам</string>
    <string name="most_liked">Больше лайков</string>
    <string name="with_image">С картинкой</string>
    <string name="without_image">Без картинки</string>
    <string name="by_guests">От гостей</string>
    <string name="by_users">От пользователей</string>
    <string name="with_no_likes">Без лайков</string>
    <string name="add_place">Добавить место</string>
    <string name="zoom_in">Приблизить</string>
    <string name="zoom_out">Отдалить</string>
    <string name="subscriptions">Подписки</string>
    <string name="subscription">Подписка</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="type_description">Введите описание</string>
    <string name="done">Готово</string>
    <string name="delete">Удалить</string>
    <string name="choose_photo">Выберите фото</string>
    <string name="allow_notifications_to_receive_them">Разрешите уведомления, чтобы их получать</string>
    <string name="something_new">Что-то новенькое!</string>
    <string name="user_posted_a_new_tag">Пользователь %1$s опубликовал новый тэг!</string>
    <string name="select_image_source">Выберите источник изображения</string>
    <string name="take_photo">Сделать фото</string>
    <string name="choose_from_gallery">Выбрать из галереи</string>
    <string name="you_have_logged_out">Вы вышли из аккаунта</string>
    <string name="you_have_logged_in">Вы успешно вошли в аккаунт</string>
    <string name="tag_created">Тэг успешно создан</string>
    <string name="tag_deleted">Тэг удалён</string>
    <string name="notifications">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="notifications_interval">Частота уведомлений</string>
    <string name="notifications_interval_summary">С каким интервалом вы хотите получать уведомления</string>
    <string name="allow_options_on_main_screen">Опции на главном экране</string>
    <string name="are_visible">Видны</string>
    <string name="are_hidden">Спрятаны</string>
    <string name="enabled">Вкл</string>
    <string name="disabled">Выкл</string>
    <string name="force_dark_mode">Тёмная тема</string>
    <string name="restart_required_for_applying">Для применения изменений нужно перезапустить приложение</string>
    <string name="restart_now">Перезапустить</string>
    <string name="later">Позже</string>
    <string name="contacts">Контакты</string>
    <string name="application">Приложение</string>
    <string name="choose_link">Выберите ссылку</string>
</resources>